# RepoContraAudit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: data_format.md  method_mapping.md
examples/: toy_audit_units.jsonl
examples/sample_repo/: Vault.sol
src/repocontraaudit/: __init__.py  antifact.py  builders.py  chains.py  data.py  model.py  schema.py  text.py  training.py
src/repocontraaudit/cli/: __init__.py  build_graph.py  infer.py  train.py
supplementary_anonymous/: README.md
supplementary_anonymous/configs/: eval_default.yaml  llm_baselines.yaml  train_default.yaml
supplementary_anonymous/metrics/: compute_antifact_metrics.py  compute_chain_metrics.py  compute_detection.py  compute_localization.py
supplementary_anonymous/profiling/: profile_runtime.sh
supplementary_anonymous/prompts/: llm_direct.txt  llm_evidencegraph.txt  llm_rag.txt  llm_tool.txt
supplementary_anonymous/scripts/: build_graphs.sh  eval_antifact.sh  eval_detect.sh  eval_llm.sh  eval_localize.sh  preprocess.sh  significance.sh  train.sh
supplementary_anonymous/significance/: paired_bootstrap.py
supplementary_anonymous/splits/: bigvul_split_manifest.json  d2a_split_manifest.json  smartbugs_split_manifest.json  solidifi_split_manifest.json
tests/: test_reference_pipeline.py
